deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: APP
    app.kubernetes.io/instance: websphere
    app.kubernetes.io/name: APP
    release: websphere
  name: APP
  namespace: NAMESPACE
spec:
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: https
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: APP
  sessionAffinity: None
  type: ClusterIP
